--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://accounts.google.com/gsi/client"></script>
     <title>Магазин</title>
   </head>
   <body>
